Re-upgraded to Java 17 + HEAVY performance boosts