@@ -1,17 +1,18 @@
 package com.cs321.team1.menu;
 
-import com.cs321.team1.assets.Controls;
-import com.cs321.team1.assets.audio.Sounds;
 import com.cs321.team1.game.Game;
 import com.cs321.team1.game.GameSegment;
-import com.cs321.team1.map.Vec2;
 import com.cs321.team1.menu.elements.MenuElement;
 import com.cs321.team1.menu.elements.MenuText;
+import com.cs321.team1.util.Controls;
+import com.cs321.team1.util.ResourceUtil;
+import com.cs321.team1.util.Vec2;
+import com.cs321.team1.util.audio.Sounds;
 import java.awt.Color;
 import java.awt.Font;
 import java.awt.Graphics2D;
 import java.awt.Image;
-import java.awt.image.BufferedImage;
+import java.awt.image.VolatileImage;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,29 +24,27 @@ public abstract class Menu implements GameSegment {
   private int tick = 0;
 
   @Override
-  public void refresh() {
+  public void restart() {
     tick = 0;
   }
 
   @Override
-  public BufferedImage render() {
-    Vec2 screenSize = Game.get().getRenderingManager().getScreenSize();
-    BufferedImage image = Game.get().getRenderingManager().createImage();
-    Graphics2D graphics = image.createGraphics();
-    graphics.setColor(new Color(0f, 0f, 0f, 0.8f));
-    graphics.fillRect(0, 0, screenSize.x, screenSize.y);
-    graphics.setColor(Color.WHITE);
-    Font font = Game.get().getRenderingManager().getFont().deriveFont(((float) getTextSize()));
+  public void render(Graphics2D buffer) {
+    Vec2 screenSize = Game.get().settings.getScreenSize();
+    buffer.setColor(new Color(0f, 0f, 0f, 0.8f));
+    buffer.fillRect(0, 0, screenSize.x(), screenSize.y());
+    buffer.setColor(Color.WHITE);
+    Font font = Game.get().renderer.getFont().deriveFont(((float) getTextSize()));
     List<Image> renders = elements.stream()
         .map(it -> it.render(font, it == getSelectableElements().get(selected) ? tick : -1))
-        .collect(Collectors.toList());
+        .toList();
     int renderHeight = renders.stream().mapToInt(it -> it.getHeight(null)).sum();
-    int y = (screenSize.y - renderHeight) / 2;
+    int y = (screenSize.y() - renderHeight) / 2;
     for (Image render : renders) {
-      graphics.drawImage(render, 0, y, null);
+      buffer.drawImage(render, 0, y, null);
       y += render.getHeight(null);
+      render.flush();
     }
-    return image;
   }
 
   @Override
@@ -77,21 +76,21 @@ public abstract class Menu implements GameSegment {
   private int getTextSize() {
     int maxWidth;
     int totalHeight;
-    int textSize = Game.get().getRenderingManager().getScreenSize().y / 20 + 1;
+    int textSize = Game.get().settings.getScreenSize().y() / 20 + 1;
     do {
       maxWidth = 0;
       totalHeight = 0;
       textSize--;
       for (MenuElement element : elements) {
-        Font font = Game.get().getRenderingManager().getFont().deriveFont(((float) textSize));
+        Font font = Game.get().renderer.getFont().deriveFont(((float) textSize));
         int width = element.getWidth(font);
         if (maxWidth < width) {
           maxWidth = width;
         }
         totalHeight += element.getHeight(font);
       }
-    } while (maxWidth > Game.get().getRenderingManager().getScreenSize().x
-        || totalHeight > Game.get().getRenderingManager().getScreenSize().y);
+    } while (maxWidth > Game.get().settings.getScreenSize().x()
+        || totalHeight > Game.get().settings.getScreenSize().y());
     return textSize;
   }
 }
